# bootcp

./: CMakeLists.txt  socketservice.sln
include/: bootcp.h  client.h  conn.h  httpclient.h  httpmsg.h  httpmsgid.h  httpparser.h  httprequest.h  httpresponse.h  httpserver.h  msg.h  msgid.h  server.h  simplemsg.h  simplemsgid.h  sock.h  ssl.h  sslconn.h  tcpconn.h  url.h
socketservice/: bootcp.cpp  bootcp.h  client.cpp  client.h  main.cpp  msg.cpp  msg.h  msgid.h  server.cpp  server.h  simplemsg.cpp  simplemsgid.h  socketservice.vcxproj  socketservice.vcxproj.filters
socketservice/Debug/: client.obj.enc  msg.obj.enc  vc141.idb  vodsocket.obj.enc
socketservice/Debug/socketservice.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  socketservice.lastbuildstate
src/: bootcp.cpp  client.cpp  httpclient.cpp  httpmsg.cpp  httpmsgid.cpp  httpparser.cpp  httprequest.cpp  httpresponse.cpp  httpserver.cpp  main.cpp  msg.cpp  server.cpp  simplemsg.cpp  ssl.cpp  sslconn.cpp  tcpconn.cpp  url.cpp
